<resources>
    <string name="app_name">BrainMatch</string>
    <string name="witch_one_launcher">کدام بزرگ تر است؟</string>
    <string name="speed_match">سرعت عمل</string>
    <string name="your_point">امتیاز شما : %d</string>
    <string name="remain_time">زمان باقی مانده : %d</string>
    <string name="left_is_larger">چپ</string>
    <string name="right_is_larger">راست</string>
    <string name="equal">برابر</string>
    <string name="finish_text">بازی به اتمام رسید!</string>
    <string name="start">شروع</string>
    <string name="best_score">امتیازها</string>
    <string name="enter_your_name">نام خود را وارد کنید</string>
    <string name="confirm">تایید</string>
    <string name="none">هیچکدام</string>
    <string name="both">هردو</string>
    <string name="one">یکیش</string>
    <string name="speed_earn_text">امتیاز شما %d</string>
    <string name="speed_desc">این شکل با شکل قبل از دو منظر رنگ و قالب همخوانی دارد؟</string>
    <string name="select_game">از دو بازی زیر یکی را انتخاب کن</string>
    <string name="greeting">%s عزیز!</string>
    <string name="exit">خروج</string>
    <string name="enter_name_for_confirm">نام کاربری باید وارد شود</string>
</resources>

