<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:clickable="true">

<android.support.constraint.ConstraintLayout
    android:id="@+id/witch_one_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <TextView
        android:id="@+id/point_show_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_point"
        android:textSize="@dimen/medium_size"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/medium_space"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/left_number_btn"/>

    <TextView
        android:id="@+id/remaining_time_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remain_time"
        android:visibility="invisible"
        android:textSize="@dimen/small_size"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/medium_space"
        app:layout_constraintTop_toBottomOf="@id/point_show_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <Button
        android:id="@+id/left_number_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textSize="@dimen/medium_size"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/medium_space"
        android:background="@drawable/button_draw"
        app:layout_constraintRight_toLeftOf="@id/right_number_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/right_number_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_space"
        android:textSize="@dimen/medium_size"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        android:background="@drawable/button_draw"
        app:layout_constraintLeft_toRightOf="@id/left_number_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/equal_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:textSize="@dimen/medium_size"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/small_space"
        android:background="@drawable/button_draw"
        android:paddingLeft="@dimen/large_space"
        android:paddingRight="@dimen/large_space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/right_number_btn"/>


</android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/count_down_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="@dimen/very_large_size"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>