<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:elevation="2dp"
    android:background="@drawable/back_gradiant">

    <ProgressBar
        android:id="@+id/progress_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
        android:backgroundTint="@color/blue"/>

    <ImageView
        android:id="@+id/shapeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:src="@drawable/ic_check_box_outline_blank_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        android:layout_margin="@dimen/large_space"
        />


    <ImageView
        android:id="@+id/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_space"
        android:background="@drawable/background_shape"
        android:src="@drawable/ic_iconmonstr_triangle_1"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <ImageView
        android:id="@+id/shape_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        android:layout_margin="@dimen/large_space"
        android:visibility="gone"
        android:background="@drawable/background_shape"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:elevation="5dp">
        <ImageView
            android:id="@+id/start_up_timer_circle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/speed_circle"
            android:padding="@dimen/medium_space"/>
        <TextView
            android:id="@+id/start_up_count_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textSize="@dimen/text_number"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:id="@+id/tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:src="@drawable/ic_cancel_black_24dp"/>
    </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_space"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
            <ImageView
                android:id="@+id/failed"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_circle_black_24dp"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/speed_desc"
        android:layout_margin="@dimen/large_space"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/medium_size"
        app:layout_constraintTop_toBottomOf="@id/shape"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/btn_none"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/none"
            android:padding="@dimen/medium_size"
            android:enabled="false"
            android:background="@drawable/button_draw"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="@id/btn_one"
            app:layout_constraintLeft_toRightOf="@id/btn_one"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btn_one"
            android:layout_margin="@dimen/large_space"/>
        <Button
            android:id="@+id/btn_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:padding="@dimen/medium_size"
            android:enabled="false"
            android:background="@drawable/button_draw"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toRightOf="@id/btn_both"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_none"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/large_space"
            />
        <Button
            android:id="@+id/btn_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both"
            android:padding="@dimen/medium_size"
            android:background="@drawable/button_draw"
            android:enabled="false"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_one"
            app:layout_constraintTop_toTopOf="@id/btn_one"
            app:layout_constraintBottom_toBottomOf="@id/btn_one"
            android:layout_margin="@dimen/large_space"/>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>